; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_mp_image.c_mp_image_set_size.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_mp_image.c_mp_image_set_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_image = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_image_set_size(%struct.mp_image* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mp_image*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mp_image* %0, %struct.mp_image** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sge i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load i32, i32* %6, align 4
  %11 = icmp sge i32 %10, 0
  br label %12

12:                                               ; preds = %9, %3
  %13 = phi i1 [ false, %3 ], [ %11, %9 ]
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %18 = getelementptr inbounds %struct.mp_image, %struct.mp_image* %17, i32 0, i32 2
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i32 %16, i32* %19, align 4
  %20 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %21 = getelementptr inbounds %struct.mp_image, %struct.mp_image* %20, i32 0, i32 0
  store i32 %16, i32* %21, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %24 = getelementptr inbounds %struct.mp_image, %struct.mp_image* %23, i32 0, i32 2
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  store i32 %22, i32* %25, align 4
  %26 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %27 = getelementptr inbounds %struct.mp_image, %struct.mp_image* %26, i32 0, i32 1
  store i32 %22, i32* %27, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
